--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <span>6</span>
                     </div>
                     <div class="button content-operator-color">
-                        <span>x</span>
+                        <span>*</span>
                     </div>
                     <div class="button content-operator-color">
                         <span>()</span>
